assets/styles/style.css
/* ... */
.nav__list a,
.nav__list button {
  color: var(--primary-clr-800);
}

.nav__list a:hover,
.nav__list a:focus {
  color: var(--primary-clr-400);
}

.nav__list-item--icon {
  display: inline-flex;
  gap: 4px;
  align-items: center;
}

.nav__list-item--products::after {
  content: '';
  display: inline-block;
  width: 24px;
  height: 24px;
  background-image: url('../images/icons/chevron-down-dark.svg');
}

.nav__list-item--language-mk::before {
  content: '';
  display: inline-block;
  width: 25px;
  height: 15px;
  background-image: url('../images/flagMacedonian.png');
  background-size: cover;
  background-position: center;
}

.nav__list-item--language-sq::before {
  content: '';
  display: inline-block;
  width: 25px;
  height: 15px;
  background-image: url('../images/flagAlbanian.png');
  background-size: cover;
  background-position: center;
}

.nav__list-nested {
  position: relative;
}

.nav__list-nested-list {
  position: absolute;
  z-index: 999;
  left: -28px;
  top: 100%;
  padding: 16px 28px;
  background-color: var(--neutral-clr-100);
  border-radius: var(--border-radius-200);
  display: flex;
  flex-direction: column;
  gap: 20px;
  display: none;
}

.nav__list-nested-list[aria-expanded='true'] {
  display: flex;
}

.nav__list-nested__item a {
  text-wrap: nowrap;
  width: max-content;
}

/* FOOTER */
.footer {
  background-color: var(--neutral-clr-900);
  color: var(--primary-clr-400);
  padding-top: 40px;
}

.footer a:hover,
.footer a:focus {
  color: var(--neutral-clr-100);
}

.footer .h4 {
  color: var(--neutral-clr-100);
  margin-bottom: 16px;
}

.footer__content-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 40px;
  margin-bottom: 40px;
}

.footer__content-contact-list,
.footer__content-navigation-list {
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.footer__content-contact-list-item {
  display: flex;
  align-items: center;
  gap: 6px;
}

.footer__content-map {
  border-radius: var(--border-radius-200);
}

.footer__copyright {
  padding-block: 12px;
  border-top: 1px solid var(--neutral-clr-800);
  color: var(--neutral-clr-100);
}

.footer__copyright a {
  color: var(--neutral-clr-100);
}

.footer__copyright a:hover,
.footer__copyright a:focus {
  color: var(--primary-clr-400);
}

.footer__copyright-container {
  display: flex;
  flex-wrap: wrap;
  gap: 12px;
  justify-content: space-between;
}

@media (min-width: 992px) {
  .footer .h4 {
    margin-bottom: 28px;
  }

  .footer__content-container {
    flex-direction: row;
  }

  .footer__content-container {
    margin-bottom: 80px;
  }
}

.s-section-header {
  padding-block: 24px;
  background-color: var(--primary-clr-100);
}

.s-section-header--l {
  padding-block: 40px;
}

.s-section-header__text {
  margin-top: 16px;
  max-width: 760px;
}

.s-section-header__buttons {
  margin-top: 40px;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  gap: 32px;
}

@media (min-width: 768px) {
  .s-section-header {
    text-align: center;
    padding-block: 40px;
  }

  .s-section-header--l {
    padding-block: 80px;
  }

  .s-section-header__text {
    margin-inline: auto;
  }

  .s-section-header__buttons {
    justify-content: center;
  }
}

.s-image-slider {
  padding-block: 30px;
}

@media (min-width: 768px) {
  .image-slider {
    padding-block: 60px;
  }
}

.s-content {
  padding-block: 30px;
}

.s-content--one-column .s-content__paragraph {
  margin-bottom: 32px;
}

.s-content__columns {
  margin-top: 16px;
  display: flex;
  flex-direction: column;
  gap: 24px;
}

.s-content__columns > * {
  flex: 1 1 100%;
}

@media (min-width: 768px) {
  .s-content {
    padding-block: 60px;
  }

  .s-content__columns {
    flex-direction: row;
  }
}

.s-features {
  padding-block: 30px;
}

.s-features__text {
  margin-top: 16px;
  max-width: 780px;
}

.s-features__cards {
  margin-top: 30px;
  display: grid;
  gap: 20px;
}

.s-features__cards-card {
  padding: 24px;
}

.s-features__cards-card.bg-dark .s-features__cards-card__title,
.s-features__cards-card.bg-primary .s-features__cards-card__title {
  color: var(--neutral-clr-100);
}

.s-features__cards-card__text {
  margin-block: 16px 24px;
}

@media (min-width: 768px) {
  .s-features {
    padding-block: 60px;
  }

  .s-features__header {
    text-align: center;
  }

  .s-features__text {
    margin-inline: auto;
  }

  .s-features__cards {
    margin-top: 60px;
  }

  .s-features__cards-card {
    padding: 32px;
  }
}

@media (min-width: 992px) {
  .s-features__cards {
    grid-template-columns: repeat(2, 1fr);
  }
}

.s-slider {
  padding-block: 30px;
}

.swiper__slider {
  background-color: var(--primary-clr-100);
  border-radius: var(--border-radius-200);
  position: relative;
  cursor: grab;
}

.swiper-button {
  background-color: var(--neutral-clr-900);
  width: 40px !important;
  height: 40px !important;
  border-radius: var(--border-radius-100);
  position: absolute;
  top: auto !important;
  bottom: 28px !important;
  right: 28px !important;
  left: auto !important;
  background-repeat: no-repeat;
  background-position: center;
}

.swiper-button:hover,
.swiper-button:focus {
  background-color: var(--primary-clr-400);
}

.swiper-button-prev {
  background-image: url(../images/icons/chevron-left.svg);
  right: 76px !important;
}

.swiper-button-next {
  background-image: url(../images/icons/chevron-right.svg);
}

.s-slider__slide {
  padding: 24px;
  padding-bottom: 100px !important;
  display: flex !important;
  flex-direction: column;
  gap: 32px;
}

.s-slider__title {
  margin-bottom: 24px;
}

.s-slider__slide-btn {
  margin-top: 40px;
}

.s-slider__slide-content {
  max-width: 677px;
}

.s-slider__slide-image {
  max-width: 285px;
  border-radius: var(--border-radius-200);
}

.s-slider__slide-image--gutter {
  max-width: 1000px;
}

.s-slider__slide-title {
  margin-bottom: 16px;
}
/* ... */

